	PR c++/71546 - lambda init-capture with qualified-id.

* parser.c (cp_parser_lambda_introducer): Clear scope after
	each lambda capture.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@258043 138bc75d-0d04-0410-961f-82ee72b054a4